# tde-style-oxygen

./: CMakeLists.txt  ConfigureChecks.cmake  README.md  config.h.cmake
style/: CMakeLists.txt  Oxygen.kcsrc  data.h  misc.cpp  misc.h  oxygen.themerc  oxygenstyle.cpp  oxygenstyle.h
twin/: CMakeLists.txt  oxygen.desktop  oxygenclient.cpp  oxygenclient.h
twin/config/: CMakeLists.txt  configdialog.ui  exampleconfig.cpp  exampleconfig.h
